style: fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,23 @@
   position: relative;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overscroll-behavior: none;
+  margin: 0;
+  padding: 0;
+}
+
 html {
   font-size: 14px;
 }
 
-body, p, li {
+body,
+p,
+li {
   font-size: clamp(1rem, 0.9rem + 0.5vw, 1.2rem);
 }
 
