--- a/styles/layout.css
+++ b/styles/layout.css
@@ -13,8 +13,6 @@ section {
 
 .content {
   width: 100%;
-  height: 100%;
-  min-height: 100dvh;
   padding: 1rem;
   display: flex;
   flex-direction: column;
